# pyBuildingEnergy

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.rst  pybuildingenergy.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
charts/: Yearly_eNeed_gauge.html  bui_data_analysis.html  enegry_profile.html  energy_signature.html  monthly_heating_cooling_need.html  monthly_heating_need.html
docs/: Makefile  building.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  pybuildingenergy.data.rst  pybuildingenergy.rst  pybuildingenergy.source.rst  requirements.txt  usage.rst
docs/Examples/: example.rst
docs/Overview/: overview.rst
examples/: BESTEST600_iso_vs_energyplus.html  BESTEST600_iso_vs_energyplus_Athens.html  BESTEST600_iso_vs_energyplus_Berlin.html  BESTEST600_iso_vs_energyplus_Bolzano.html  BESTEST600_iso_vs_energyplus_Madrid.html  BESTEST600_iso_vs_energyplus_Milan.html  archetype.py  beat_buildings_to_bui_json_for_simulation.py  besttest600.py  calc_energy_archetype.py  create_mongo_db.py  create_mongo_db_from_archetypes.py  dhw.py  explore_energy_results.py  heating_cooling_capacity_classifier.py  new_building.py  new_building_from_archetype.py  pybuilding_for_beat.py  pybuilding_for_beat_v1.py  pybuilding_for_beat_v2.py  pybuilding_for_beat_v3.py  pybuilding_for_beat_v3_parallel_execution.py  pybuilding_for_beat_v4_sequential_for_debugging.py  pybuilding_for_beat_v5_parallel_execution.py  pybuilding_start.py  readme.rst  src.py  urbem_scorecard_to_bui_json.py
examples/Result/: Yearly_eNeed_gauge.html  annual_sim__arch.csv  energy_signature.html  hourly_sim__arch_buiOld.csv  line_chart.html  monthly_heating_cooling_need.html  monthly_heating_need.html
examples/archetypes/: ER_4a.json  ER_5a.json
examples/energyPlus_data/: Case600_V22.1.0out_Denver.csv  eplusout.csv
examples/weatherdata/: 2020_Berlin.epw  2020_Milan.epw  tmy_37.116_14.561_2005_2020.csv  tmy_39.783_-104.892_2005_2015.epw  tmy_46.491_11.332_2005_2020.epw  tmy_47.360_2.080_2005_2020.csv  tmy_52.496_13.414_2005_2020.csv
pybuildingenergy/: __init__.py  archetypes.pickle  global_inputs.py  pybuildingenergy.py
pybuildingenergy/charts/: Yearly_eNeed_gauge.html  energy_signature.html  line_chart.html  monthly_heating_cooling_need.html  monthly_heating_need.html  new_building_.html  new_building_from_archetype.html
pybuildingenergy/data/: best_tests.py  building_archetype.py  materials.json  profiles.py  readme.md
pybuildingenergy/data/energyPlus_data/: Case600_V22.1.0out_Berlin.csv  Case600_V22.1.0out_Stockholm.csv
pybuildingenergy/examples/: BESTEST600_iso_vs_energyplus.html  BESTEST600_iso_vs_energyplus_Athens.html  besttest600.py  new_building.py  new_building_from_archetype.py  readme.md  readme.rst
pybuildingenergy/examples/weatherdata/: 2020_Madrid.epw  tmy_46.491_11.332_2005_2020.csv  tmy_54.515_18.540_2005_2020.csv
pybuildingenergy/src/: __init__.py  building_stock.py  functions.py  graphs.py  utils.py
src/pybuildingenergy/: __init__.py  archetypes.pickle  calc_construction_properties.py  calc_u_value_and_thermal_capacity.py  constants.py  example.py  example_test.py  global_inputs.py  pybuildingenergy.py
src/pybuildingenergy/Result/: Yearly_eNeed_gauge.html  annual_sim__arch.csv  energy_signature.html  hourly_sim__arch.csv  line_chart.html  main_report.html  monthly_heating_cooling_need.html  monthly_heating_need.html
src/pybuildingenergy/charts/: Yearly_eNeed_gauge.html  bui_data_analysis.html  enegry_profile.html  energy_signature.html  line_chart.html  monthly_heating_cooling_need.html  monthly_heating_need.html  new_building_.html  new_building_from_archetype.html  new_building_report.html
src/pybuildingenergy/data/: beat_building_1301600.json  bui.json  building_archetype.py  construction_properties.json  locations.json  materials.json  urbem_long_format_data.parquet
src/pybuildingenergy/data/energyPlus_data/: Case600_V22.1.0.idf  Case600_V22.1.0out_Athens.csv  Case600_V22.1.0out_Bolzano.csv  Case600_V22.1.0out_Denver2.csv  Case600_V22.1.0out_Madrid.csv  Case600_V22.1.0out_Milan.csv
src/pybuildingenergy/source/: DHW.py  README.md  __init__.py  annual_sim__arch.csv  check_input.py  chek_input.py  functions.py  generate_profile.py  global_inputs.py  graphs.py  hourly_sim__arch.csv  iso_15316_1.py  table_iso_16798_1.py  utils.py  ventilation.py
test:to_be/: test_create_bui_obj.py
tests/: __init__.py  test_create_bui_obj.py  test_create_report.py  test_dhw.py  test_general.py  test_pybuildingenergy.py  test_simul_newbui_from_archetype.py  test_simulate_archetype.py  test_simulate_besttest.py  test_simulation_new_bui.py
tests/input_data/: BESTEST600_iso_vs_energyplus_Milano.html  BESTEST600_iso_vs_energyplus_Stockholm.html  src.py
tests/input_data/Result/: Yearly_eNeed_gauge.html  annual_sim__arch.csv  energy_signature.html  hourly_sim__arch.csv  line_chart.html  main_report.html  main_report_2.html  monthly_heating_cooling_need.html  monthly_heating_need.html  new_building_.html  testbed600_ISO_vs_Eplus_Athens.html
tests/input_data/weatherdata/: 2020_Athens.epw  2020_Stockholm.epw  tmy_37.116_14.561_2005_2020.epw  tmy_39.783_-104.892_2005_2015.csv  tmy_47.360_2.080_2005_2020.epw
tests/snapshots/test_create_bui_obj/test_create_bui_obj/: properties_inputs.yml
tests/snapshots/test_create_report/test_plotting_report/: report_generated.yml
tests/snapshots/test_dhw/test_energy_needs/: dhw_test.yml
tests/snapshots/test_pybuildingenergy/test_create_bui_obj/: properties_inputs.yml
tests/snapshots/test_pybuildingenergy/test_simulation/: hourly_sim.json
tests/snapshots/test_simulate_besttest/test_best600/: data_best600_athens.json
tests/snapshots/test_simulation_new_bui/test_simulation/: annual_results_df.json  hourly_sim.json
