[metadata]
name = pybuildingenergy
version = 1.0.7
description = library to simulate builiding performance
author = Daniele antonucci
author_email = daniele.antonucci@eurac.edu
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EURAC-EEBgroup/pyBuildingEnergy/
project_urls =
    Documentation = https://pybuildingenergy.readthedocs.io/en/latest/Overview/overview.html
    Source = https://github.com/EURAC-EEBgroup/pyBuildingEnergy/
    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
norecursedirs =
    dist
    build
    .tox  

# [devpi:upload]
# # Options for the devpi: PyPI server and packaging tool
# # VCS export must be deactivated since we are using setuptools-scm
# no_vcs = 1
# formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

